All out of bounds errors fixed, added legend to card (subject to modification)

--- a/src/components/Modals/Modals.css
+++ b/src/components/Modals/Modals.css
@@ -7,15 +7,34 @@
     align-items: center;
     background-color: aliceblue;
     min-height: min-content;
+    min-width: min-content;
+}
+
+.modal-content{
+    padding-top: 0rem;
+    padding-bottom: 0rem;
 }
 #bar {
-    padding-top: .2rem;
+    padding-top: 0rem;
+    padding-bottom:0rem;
+}
+
+#barName {
+    padding-bottom: -2rem;
+}
+
+#data_bars {
+    float:left;
+}
+
+#legend {
+    float:left;
 }
 /*height: 20px;
 width: 500px;*/
 .progress-bar-container {
     height: 20px;
-    border-radius: 0px;
+    border-radius: 10px;
     border: 1px solid #333000;
     display:flex;
     flex-direction: column;
@@ -24,5 +43,5 @@ width: 500px;*/
 
 .filled {
     height:100%;
-    border-radius: 0px;
+    border-radius: 10px;
 }
